# git-ghpr

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: pull-request.yml
src/: common.rs  configuration.rs  create.rs  main.rs  result.rs  verbose.rs
tests/: no_repository.rs  with_repository.rs
tests/artifacts/: initialized_no_commits.sh
tests/common/: mod.rs
tests/resources/: base_branch_not_remote.sh  existing_branch.sh  initialized_no_commits.sh  no_branch.sh  unknown_main_branch.sh
