[package]
name = "git-github-pull-request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.1", features = [ "derive" ] }
figment = { version = "0.10", features = ["toml", "env"] }
git2 = "0.16"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
directories = "4.0"

[dev-dependencies]
assert_cmd = "2.0"
escargot = "0.5"
flate2 = "1.0"
speculoos = "0.11"
tar = "0.4"
tempfile = "3.3"
